--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
      
       <div class="recipe-detail preparation-time">
-        <h3>Preparation time</h3>
+        <p class="title">Preparation time</p>
         <ul>
           <li><span><strong>Total:</strong> Approximately 10 minutes</li></span>
           <li><span><strong>Preparation:</strong> 5 minutes</li></span>
